{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 12,
  "lineage": "0dda9745-e43b-bffd-cc4b-501e9e5c3183",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "app_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0638b0cf68964b260",
            "arn": "arn:aws:ec2:us-east-1:350569106663:elastic-ip/eipalloc-0638b0cf68964b260",
            "association_id": "eipassoc-00e6b5b8fa174a063",
            "domain": "vpc",
            "id": "eipalloc-0638b0cf68964b260",
            "instance": "i-0ab9e4fb0774e7fa6",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08c2d29a2215422c0",
            "private_dns": "ip-10-0-1-18.ec2.internal",
            "private_ip": "10.0.1.18",
            "public_dns": "ec2-98-82-212-198.compute-1.amazonaws.com",
            "public_ip": "98.82.212.198",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "mern-app-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mern-app-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.mern_app",
            "aws_security_group.app_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.app_vpc",
            "data.aws_ami.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mern_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-097947612b141c026",
            "arn": "arn:aws:ec2:us-east-1:350569106663:instance/i-0ab9e4fb0774e7fa6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ab9e4fb0774e7fa6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08c2d29a2215422c0",
            "private_dns": "ip-10-0-1-18.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.18",
            "public_dns": "ec2-98-82-212-198.compute-1.amazonaws.com",
            "public_ip": "98.82.212.198",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a22c7dba40ef7392",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00fc4de1da39bffe0",
            "tags": {
              "Environment": "dev",
              "Name": "mern-app-server"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mern-app-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c692d90eb1ced4d0"
            ]
          },
          "dependencies": [
            "aws_security_group.app_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.app_vpc",
            "data.aws_ami.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:350569106663:internet-gateway/igw-0d457a7d35789bd98",
            "id": "igw-0d457a7d35789bd98",
            "owner_id": "350569106663",
            "tags": {
              "Environment": "dev",
              "Name": "mern-app-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mern-app-igw"
            },
            "vpc_id": "vpc-0784e0b290a33d6a1"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:350569106663:route-table/rtb-04eeea6cb4400c6aa",
            "id": "rtb-04eeea6cb4400c6aa",
            "owner_id": "350569106663",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d457a7d35789bd98",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "mern-app-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mern-app-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0784e0b290a33d6a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-008976f74a054c8f9",
            "route_table_id": "rtb-04eeea6cb4400c6aa",
            "subnet_id": "subnet-00fc4de1da39bffe0"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:350569106663:security-group/sg-0c692d90eb1ced4d0",
            "description": "Security group for MERN app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c692d90eb1ced4d0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "mern-app-sg",
            "name_prefix": "",
            "owner_id": "350569106663",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "mern-app-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mern-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0784e0b290a33d6a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:350569106663:subnet/subnet-00fc4de1da39bffe0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00fc4de1da39bffe0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "350569106663",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "mern-app-public-subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mern-app-public-subnet"
            },
            "vpc_id": "vpc-0784e0b290a33d6a1"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:350569106663:vpc/vpc-0784e0b290a33d6a1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f05a1992b3ed1b62",
            "default_route_table_id": "rtb-0d1bab1254d0dae28",
            "default_security_group_id": "sg-0972393ad3d9368e8",
            "dhcp_options_id": "dopt-09028fdedec92df3b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0784e0b290a33d6a1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d1bab1254d0dae28",
            "owner_id": "350569106663",
            "tags": {
              "Environment": "dev",
              "Name": "mern-app-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mern-app-vpc"
            }
          }
        }
      ]
    }
  ]
}